@@ -50,7 +50,40 @@
                 SHOW_ERROR: "{% trans 'Show error' %}",
                 EDITOR_CRASH: "{% trans 'The editor just crashed. Content has been reset to the last saved version.' %}",
                 BROKEN_LINK: "{% trans 'Broken link' %}",
-                MISSING_DOCUMENT: "{% trans 'Missing document' %}"
+                MISSING_DOCUMENT: "{% trans 'Missing document' %}",
+
+                MONTHS: [
+                    "{% trans 'January' %}",
+                    "{% trans 'February' %}",
+                    "{% trans 'March' %}",
+                    "{% trans 'April' %}",
+                    "{% trans 'May' %}",
+                    "{% trans 'June' %}",
+                    "{% trans 'July' %}",
+                    "{% trans 'August' %}",
+                    "{% trans 'September' %}",
+                    "{% trans 'October' %}",
+                    "{% trans 'November' %}",
+                    "{% trans 'December' %}"
+                ],
+                WEEKDAYS: [
+                    "{% trans 'Sunday' %}",
+                    "{% trans 'Monday' %}",
+                    "{% trans 'Tuesday' %}",
+                    "{% trans 'Wednesday' %}",
+                    "{% trans 'Thursday' %}",
+                    "{% trans 'Friday' %}",
+                    "{% trans 'Saturday' %}"
+                ],
+                WEEKDAYS_SHORT: [
+                    "{% trans 'Sun' %}",
+                    "{% trans 'Mon' %}",
+                    "{% trans 'Tue' %}",
+                    "{% trans 'Wed' %}",
+                    "{% trans 'Thu' %}",
+                    "{% trans 'Fri' %}",
+                    "{% trans 'Sat' %}"
+                ]
             };
 
             wagtailConfig.ADMIN_URLS = {
